--- a/index.html
+++ b/index.html
@@ -301,18 +301,15 @@
                         </main>
                     </div>
                     <div class="swiper-slide">
+                      <a href="public/8ball.html">
                         <main class="content-box">
                             <div class="box">
                                 <div class="slide-img">
-                                    <img
-                                        src="img/soon.webp"
-                                        width="100"
-                                        alt="FAYY"
-                                    />
+                                    <img src="https://www.imghippo.com/images/1702704308.png" alt="" border="0">
                                 </div>
                                 <div class="detail-box">
                                     <div class="type">
-                                        <a href="#">VALORAN</a>
+                                        <a href="#">8 BALL POOL</a>
                                     </div>
                                 </div>
                             </div>
