--- a/index.html
+++ b/index.html
@@ -316,18 +316,15 @@
                         </main>
                     </div>
                     <div class="swiper-slide">
+                      <a href="public/fcmobile.html">
                         <main class="content-box">
                             <div class="box">
                                 <div class="slide-img">
-                                    <img
-                                        src="img/soon.webp"
-                                        width="100"
-                                        alt="FAYY"
-                                    />
+                                    <img src="https://www.imghippo.com/images/1702733697.jpg" alt="FAYY" border="0">
                                 </div>
                                 <div class="detail-box">
                                     <div class="type">
-                                        <a href="#">VALORAN</a>
+                                        <a href="#">FC MOBILE</a>
                                     </div>
                                 </div>
                             </div>
