--- a/public/valoran.html
+++ b/public/valoran.html
@@ -8,7 +8,7 @@
 			href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
 			rel="stylesheet"
 		/>
-		<script src="js/mlbb.js"></script>
+		<script src="./js/ffmb.js"></script>
 	</head>
 	<body>
 		<!-- Header -->
@@ -40,21 +40,19 @@
 						<section class="w-full h-[15rem]">
 							<div class="w-full h-[16rem] overflow-hidden">
 								<img
-									src="https://w0.peakpx.com/wallpaper/789/85/HD-wallpaper-lesley-angelicagent-skin-mobile-legends.jpg"
-									alt=""
-									class="w-full h-full object-cover"
+									src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHFuZWLa47js4YBendZsNNXvs0RDQQiGqC7g&usqp=CAU" class="w-full h-full object-cover"
 								/>
 							</div>
 						</section>
 						<div class="px-[16px] lg:px-0 pt-8">
 							<h1 class="font-bold text-2xl text-primary" id="game">
-								MOBILE LEGENDS
+								VALORANT
 							</h1>
 							<p
 								class="text-xs max-w-xl text-justify leading-4 opacity-80 py-1"
 							>
 								Fayy shop telah bekerja sama dengan Team untuk menawarkan top
-								up Mobile Legends dengan mudah, aman dan nyaman.
+								up Valorant dengan mudah, aman dan nyaman.
 							</p>
 							<button
 								id="myButton"
@@ -66,7 +64,7 @@
 								id="myParagraph"
 								class="text-xs max-w-xl text-justify leading-4 opacity-80 py-1 hidden lg:block"
 							>
-								Mobile Legends adalah permainan MOBA (Multiplayer Online Battle Arena) yang populer. Pemain membentuk tim 5 lawan 5 dan bertempur di arena untuk menghancurkan menara musuh dan mencapai basis lawan. Setiap pemain memilih hero dengan keahlian unik dan peran tertentu dalam pertandingan. Game ini menekankan kerjasama tim, strategi, dan keterampilan individu untuk memenangkan pertandingan. Mobile Legends telah menjadi fenomena di komunitas game mobile dengan turnamen besar dan pemain yang aktif.
+								"VALORANT" adalah permainan tembak-menembak taktis first-person shooter (FPS) yang dikembangkan oleh Riot Games. Diluncurkan pada 2020, permainan ini menonjol dengan gaya bermain yang memadukan strategi tim, karakter unik dengan keahlian khusus, dan elemen tembak-menembak presisi.<br> Pemain memilih agen dengan keahlian unik, menggunakan senjata, dan berkolaborasi dalam tim untuk mencapai tujuan tertentu, seperti menanam atau menonaktifkan bom.<br> "VALORANT" telah meraih popularitas besar dalam komunitas game dan secara teratur mendapatkan pembaruan serta turnamen kompetitif.
 							</p>
 						</div>
 					</div>
@@ -93,21 +91,17 @@
       id="userIdInput"
     />
     <input
-      oninput="this.value = this.value.replace(/[^0-9]/g, '')"
-      maxlength="4"
-      type="number"
-      placeholder="Zone Id"
+      oninput="this.text = this.text.replace(/[^0-9]/g, '')"
+      maxlength="15"
+      type="text"
+      placeholder="Nick Name"
       class="text-center font-semibold w-[6rem] py-2 text-xs border border-primary rounded-md"
       id="zoneIdInput"
     />
   </form>
   <div class="px-3 pt-4">
     <p class="text-xs italic text-justify leading-4 opacity-80">
-      Untuk mengetahui User ID Anda, silakan klik menu profile
-      dibagian kiri atas pada menu utama game. User ID akan terlihat
-      dibagian bawah Nama Karakter Game Anda. Silakan masukkan User
-      ID Anda untuk menyelesaikan transaksi. Contoh :
-      12345678(1234).
+      Untuk menemukan Riot ID Anda, buka halaman profil akun dan salin Riot ID+Tag menggunakan tombol yang tersedia disamping Riot ID. (Contoh: FayyB#COM)
     </p>
   </div>
 						</div>
@@ -133,320 +127,159 @@
 									<div
 										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
 										id="button"
-										onclick="ubahHarga(24000)"
+										onclick="ubahHarga(17320)"
 									>
 										<div
 											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(86)">
+										id="button" onclick="ubahDiamond(125)">
 											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+												src="https://assets.jajangame.com/2023/03/1b2f2a3f5a093362033bb47e63b86a57.png?auto_optimize=medium"
 												alt=""
 												width="50"
 											/>
-											<h2 class="text-center font-bold text-xs">86 Diamonds</h2>
+											<h2 class="text-center font-bold text-xs">125 VP</h2>
 											<h3
 												class="text-center font-semibold text-secondaryBlue text-xs"
 											>
-												Rp. 23.000
+												Rp. 17.320
 											</h3>
 										</div>
 									</div>
 									<div
 										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
 										id="button"
-										onclick="ubahHarga(45000)"
+										onclick="ubahHarga(50725)"
 									>
 										<div
 											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(172)">
+										id="button" onclick="ubahDiamond(420)">
 											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+												src="https://assets.jajangame.com/2023/03/1b2f2a3f5a093362033bb47e63b86a57.png?auto_optimize=medium"
 												alt=""
 												width="50"
 											/>
 											<h2 class="text-center font-bold text-xs">
-												172 Diamonds
+												420 VP
 											</h2>
 											<h3
 												class="text-center font-semibold text-secondaryBlue text-xs"
 											>
-												Rp. 45.000
+												Rp. 50.725
 											</h3>
 										</div>
 									</div>
 									<div
 										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
 										id="button"
-										onclick="ubahHarga(67000)"
+										onclick="ubahHarga(80000)"
 									>
 										<div
 											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(257)">
+										id="button" onclick="ubahDiamond(700)">
 											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+												src="https://assets.jajangame.com/2023/03/1b2f2a3f5a093362033bb47e63b86a57.png?auto_optimize=medium"
 												alt=""
 												width="50"
 											/>
 											<h2 class="text-center font-bold text-xs">
-												257 Diamonds
+												700 VP
 											</h2>
 											<h3
 												class="text-center font-semibold text-secondaryBlue text-xs"
 											>
-												Rp. 67.000
+												Rp. 80.000
 											</h3>
 										</div>
 									</div>
 									<div
 										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
 										id="button"
-										onclick="ubahHarga(90000)"
+										onclick="ubahHarga(149300)"
 									>
 										<div
 											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(344)">
+										id="button" onclick="ubahDiamond(1375)">
 											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+												src="https://assets.jajangame.com/2023/03/1b2f2a3f5a093362033bb47e63b86a57.png?auto_optimize=medium"
 												alt=""
 												width="50"
 											/>
 											<h2 class="text-center font-bold text-xs">
-												344 Diamonds
+												1375 VP
 											</h2>
 											<h3
 												class="text-center font-semibold text-secondaryBlue text-xs"
 											>
-												Rp. 90.000
+												Rp. 149.300
 											</h3>
 										</div>
 									</div>
 									<div
 										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
 										id="button"
-										onclick="ubahHarga(115000)"
+										onclick="ubahHarga(244600)"
 									>
 										<div
 											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(429)">
+										id="button" onclick="ubahDiamond(2400)">
 											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+												src="https://assets.jajangame.com/2023/03/1b2f2a3f5a093362033bb47e63b86a57.png?auto_optimize=medium"
 												alt=""
 												width="50"
 											/>
 											<h2 class="text-center font-bold text-xs">
-												429 Diamonds
+												2400 VP
 											</h2>
 											<h3
 												class="text-center font-semibold text-secondaryBlue text-xs"
 											>
-												Rp. 115.000
+												Rp. 244.600
 											</h3>
 										</div>
 									</div>
 									<div
 										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
 										id="button"
-										onclick="ubahHarga(137000)"
+										onclick="ubahHarga(389780)"
 									>
 										<div
 											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(514)">
+										id="button" onclick="ubahDiamond(4000)">
 											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+												src="https://assets.jajangame.com/2023/03/1b2f2a3f5a093362033bb47e63b86a57.png?auto_optimize=medium"
 												alt=""
 												width="50"
 											/>
 											<h2 class="text-center font-bold text-xs">
-												514 Diamonds
+												4000 VP
 											</h2>
 											<h3
 												class="text-center font-semibold text-secondaryBlue text-xs"
 											>
-												Rp. 137.000
+												Rp. 389.780
 											</h3>
 										</div>
 									</div>
 									<div
 										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
 										id="button"
-										onclick="ubahHarga(160000)"
+										onclick="ubahHarga(773560)"
 									>
 										<div
 											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(600)">
+										id="button" onclick="ubahDiamond(8150)">
 											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+												src="https://assets.jajangame.com/2023/03/1b2f2a3f5a093362033bb47e63b86a57.png?auto_optimize=medium"
 												alt=""
 												width="50"
 											/>
 											<h2 class="text-center font-bold text-xs">
-												600 Diamonds
+												8150 VP
 											</h2>
 											<h3
 												class="text-center font-semibold text-secondaryBlue text-xs"
 											>
-												Rp. 160.000
-											</h3>
-										</div>
-									</div>
-									<div
-										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
-										id="button"
-										onclick="ubahHarga(176000)"
-									>
-										<div
-											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(706)">
-											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
-												alt=""
-												width="50"
-											/>
-											<h2 class="text-center font-bold text-xs">
-												706 Diamonds
-											</h2>
-											<h3
-												class="text-center font-semibold text-secondaryBlue text-xs"
-											>
-												Rp. 176.000
-											</h3>
-										</div>
-									</div>
-									<div
-										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
-										id="button"
-										onclick="ubahHarga(227000)"
-									>
-										<div
-											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(878)">
-											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
-												alt=""
-												width="50"
-											/>
-											<h2 class="text-center font-bold text-xs">
-												878 Diamonds
-											</h2>
-											<h3
-												class="text-center font-semibold text-secondaryBlue text-xs"
-											>
-												Rp. 227.000
-											</h3>
-										</div>
-									</div>
-									<div
-										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
-										id="button"
-										onclick="ubahHarga(250000)"
-									>
-										<div
-											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(963)">
-											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
-												alt=""
-												width="50"
-											/>
-											<h2 class="text-center font-bold text-xs">
-												963 Diamonds
-											</h2>
-											<h3
-												class="text-center font-semibold text-secondaryBlue text-xs"
-											>
-												Rp. 250.000
-											</h3>
-										</div>
-									</div>
-									<div
-										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
-										id="button"
-										onclick="ubahHarga(275000)"
-									>
-										<div
-											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(1050)">
-											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
-												alt=""
-												width="50"
-											/>
-											<h2 class="text-center font-bold text-xs">
-												1050 Diamonds
-											</h2>
-											<h3
-												class="text-center font-semibold text-secondaryBlue text-xs"
-											>
-												Rp. 275.000
-											</h3>
-										</div>
-									</div>
-									<div
-										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
-										id="button"
-										onclick="ubahHarga(322000)"
-									>
-										<div
-											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(1220)">
-											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
-												alt=""
-												width="50"
-											/>
-											<h2 class="text-center font-bold text-xs">
-												1220 Diamonds
-											</h2>
-											<h3
-												class="text-center font-semibold text-secondaryBlue text-xs"
-											>
-												Rp. 322.000
-											</h3>
-										</div>
-									</div>
-									<div
-										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
-										id="button"
-										onclick="ubahHarga(363000)"
-									>
-										<div
-											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(1412)">
-											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
-												alt=""
-												width="50"
-											/>
-											<h2 class="text-center font-bold text-xs">
-												1412 Diamonds
-											</h2>
-											<h3
-												class="text-center font-semibold text-secondaryBlue text-xs"
-											>
-												Rp. 363.000
-											</h3>
-										</div>
-									</div>
-									<div
-										class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md mx-auto"
-										id="button"
-										onclick="ubahHarga(543000)"
-									>
-										<div
-											class="w-full h-full flex justify-center items-center flex-col"
-										id="button" onclick="ubahDiamond(2195)">
-											<img
-												src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
-												alt=""
-												width="50"
-											/>
-											<h2 class="text-center font-bold text-xs">
-												2195 Diamonds
-											</h2>
-											<h3
-												class="text-center font-semibold text-secondaryBlue text-xs"
-											>
-												Rp. 543.000
+												Rp. 773.560
 											</h3>
 										</div>
 									</div>
@@ -497,7 +330,7 @@
 									class="font-bold text-sm text-secondaryBlue opacity-80 whitespace-nowrap"
 									id="totalDiamond"
 								>
-									0 💎
+									0 VP
 								</h1>
 							</div>
 							<div class="flex px-4 justify-between pt-4">
@@ -523,8 +356,9 @@
 				</section>
 			</section>
 		</section>
-		
-  	<section class="w-full bg-secondaryBlue pt-4 pb-8">
+
+		<!-- Accordion Section -->
+		<section class="w-full bg-secondaryBlue pt-4 pb-8">
 			<div class="container">
 				<div class="text-text text-center py-8">
 					<h1 class="text-3xl font-bold text-center text-text">
@@ -675,7 +509,7 @@
 		<!-- End Footer -->
 
 		<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-		<script src="./js/main.js"></script>
+		<script src="./js/valorant.js"></script>
 		<script></script>
 	</body>
 </html>
