--- a/index.html
+++ b/index.html
@@ -330,6 +330,21 @@
                             </div>
                         </main>
                     </div>
+                    <div class="swiper-slide">
+                      <a href="public/valoran.html">
+                        <main class="content-box">
+                            <div class="box">
+                                <div class="slide-img">
+                                    <img src="https://www.imghippo.com/images/1702742301.png" alt="FAYY" border="0">
+                                </div>
+                                <div class="detail-box">
+                                    <div class="type">
+                                        <a href="#">VALORANT</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </main>
+                    </div>
                 </div>
            </div>
         </section>
