--- a/public/valoran.html
+++ b/public/valoran.html
@@ -83,10 +83,10 @@
 							<div class="bg-text shadow-sm py-8 rounded-b-md">
   <form class="flex overflow-hidden px-4 gap-2 justify-center">
     <input
-      oninput="this.value = this.value.replace(/[^0-9]/g, '')"
+      oninput="this.text = this.text.replace(/[^0-9]/g, '')"
       maxlength="10"
-      type="number"
-      placeholder="Masukan User id"
+      type="text"
+      placeholder="Masukan Riot ID"
       class="text-center font-semibold w-[12rem] py-2 text-xs border border-primary rounded-md"
       id="userIdInput"
     />
