--- a/index.html
+++ b/index.html
@@ -345,6 +345,21 @@
                             </div>
                         </main>
                     </div>
+                    <div class="swiper-slide">
+                      <a href="public/pb.html">
+                        <main class="content-box">
+                            <div class="box">
+                                <div class="slide-img">
+                                    <img src="https://www.imghippo.com/images/1702756497.png" alt="" border="0">
+                                </div>
+                                <div class="detail-box">
+                                    <div class="type">
+                                        <a href="#">POINT BLANK</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </main>
+                    </div>
                 </div>
            </div>
         </section>
@@ -452,6 +467,7 @@
         <!-- Footer -->
         <footer>
             <main class="footer-content">
+              <a href="https://instagram.com/7superstarstore">
                 <h1>
                     &copy; Hak Cipta Fayy Shop
                     <span><i class="fa-solid fa-check-circle"></i></span> 
